--- a/styles/style.css
+++ b/styles/style.css
@@ -35,7 +35,8 @@ header {
 }
 
 p{
-    font-size: 16px;
+    font-size: 20px;
+    margin-bottom: 15px;
 }
 
 nav a {
@@ -62,7 +63,7 @@ nav a:hover{
 }
 
 h1 {
-    font-size: 3rem;
+    font-size: 70px;
     color:black;
     text-transform: uppercase;
     margin-top: 30px;
