--- a/styles/style.css
+++ b/styles/style.css
@@ -180,6 +180,12 @@ footer {
 nav{
     display: none;
 }
+.mainimg {
+    width: 200px;
+    height: 200px;
+    padding-left: 30px;
+    border-radius: 200px;
+}
 
 
 }
